syntax = "proto3";
import "google/protobuf/timestamp.proto";
package patient;
option java_multiple_files = true;
option java_package = "patient";

service PatientService {
  rpc CreatePatient(CreatePatientRequest) returns (PatientInfo);
  rpc UpdatePatient(UpdatePatientRequest) returns (PatientInfo);
  rpc DeletePatient(DeletePatientRequest) returns (PatientInfo);
  rpc RegisterPatient(RegisterPatientRequest) returns (PatientHospitalRegistrationResponse);
  rpc ListPatients(ListPatientsRequest) returns (PatientListResponse);
  rpc ListHospitalsForPatient(ListHospitalsForPatientRequest) returns (HospitalsList);
}

message PatientInfo {
  int32 id = 1;
  string name = 2;
  string sex = 3;
  google.protobuf.Timestamp date_of_birth = 4;
  string address = 5;
  string phone_number = 6;
  int32 age = 7;
}

message CreatePatientRequest {
  string name = 1;
  string sex = 2;
  string date_of_birth = 3;
  string address = 4;
  string phone_number = 5;
}

message UpdatePatientRequest {
  int32 id = 1;
  string name = 2;
  string sex = 3;
  string date_of_birth = 4;
  string address = 5;
  string phone_number = 6;
}

message DeletePatientRequest {
  int32 id = 1;
}

message RegisterPatientRequest {
  int32 hospitalId = 1;
  int32 patientId = 2;
}

message PatientHospitalRegistrationResponse {
  int32 patientId = 1;
  int32 hospitalId = 2;
  google.protobuf.Timestamp  date_of_registration = 3;
}

message ListPatientsRequest {
  int32 hospitalId = 1;
}

message PatientListResponse {
  repeated PatientInfo patients = 1;
}
message ListHospitalsForPatientRequest {
  int32 patient_id = 1;
}
message HospitalInfo {
  int32 id = 1;
  string name = 2;
  string location = 3;
  int32 number_of_beds = 4;
  string foundingDate = 5;
}

message HospitalsList {
  repeated HospitalInfo hospitals = 1;
}